--- a/.verb.md
+++ b/.verb.md
@@ -15,6 +15,17 @@ var glob = lazyCache(require)('glob');
 glob().sync('foo/*.js');
 ```
 
+The module is also added as a property to the `lazy` function
+so it can be called without having to call a function first.
+
+```js
+var lazy = lazyCache(require);
+lazy('glob');
+
+// `lazy.glob` is not a getter property that can be used.
+lazy.glob.sync('foo/*.js');
+```
+
 ## Running tests
 {%= include("tests") %}
 
