--- a/.verb.md
+++ b/.verb.md
@@ -8,23 +8,54 @@
 ## Usage
 
 ```js
-var lazyCache = require('{%= name %}');
-var glob = lazyCache(require)('glob');
-
-// `glob` is a now a function that should be called when needed
-glob().sync('foo/*.js');
+var lazy = require('{%= name %}')(require);
 ```
+
+**Use as a property on `lazy`**
 
 The module is also added as a property to the `lazy` function
 so it can be called without having to call a function first.
 
 ```js
-var lazy = lazyCache(require);
+var lazy = require('{%= name %}')(require);
+
+// `npm install glob`
 lazy('glob');
 
-// `lazy.glob` is not a getter property that can be used.
-lazy.glob.sync('foo/*.js');
+// glob sync
+console.log(lazy.glob.sync('*.js'));
+
+// glob async
+lazy.glob('*.js', function (err, files) {
+  console.log(files);
+});
 ```
+
+**Use as a function**
+
+```js
+var lazy = require('{%= name %}')(require);
+var glob = lazy('glob');
+
+// `glob` is a now a function that may be called when needed
+glob().sync('foo/*.js');
+```
+
+## Aliases
+
+An alias may be passed as the second argument if you don't want to use the automatically camel-cased variable name.
+
+**Example**
+
+```js
+var lazy = require('{%= name %}')(require);
+
+lazy('ansi-yellow', 'yellow');
+console.log(lazy.yellow('foo'));
+```
+
+## Related
+{%= related(verb.related.list) %}
 
 ## Running tests
 {%= include("tests") %}
