--- a/.verb.md
+++ b/.verb.md
@@ -48,10 +48,36 @@ An alias may be passed as the second argument if you don't want to use the autom
 **Example**
 
 ```js
-var lazy = require('{%= name %}')(require);
+var utils = require('{%= name %}')(require);
 
-lazy('ansi-yellow', 'yellow');
-console.log(lazy.yellow('foo'));
+utils('ansi-yellow', 'yellow');
+console.log(utils.yellow('foo'));
+```
+
+## Browserify usage
+
+**Example**
+
+```js
+var lazy = require('{%= name %}')(require);
+// temporarily re-assign `require` to trick browserify
+var fn = require;
+require = lazy;
+// list module dependencies here (`require` is actually `lazy`)
+require('glob');
+require = fn; // restore the native `require` function
+
+/**
+ * Now you can use glob with the `lazy.glob` variable
+ */
+
+// sync
+console.log(lazy.glob.sync('*.js'));
+
+// async
+lazy.glob('*.js', function (err, files) {
+  console.log(files.join('\n'));
+});
 ```
 
 ## Related
