--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,8 @@
 
 > {%= description %}
 
+If you use webpack and are experiencing issues, try using [unlazy-loader](https://github.com/doowb/unlazy-loader), a webpack loader that fixes the bug that prevents webpack from working with native javascript getters.
+
 ## Install
 {%= include("install-npm", {save: true}) %}
 
@@ -82,7 +84,7 @@ utils.glob('*.js', function (err, files) {
 
 ## Kill switch
 
-In certain rare edge cases, it may be necessary to unlazy all lazy-cached dependencies (two reported cases out of > 9 million downloads).
+In certain rare edge cases it may be necessary to unlazy all lazy-cached dependencies (5 reported cases out of > 11 million downloads).
 
 To force lazy-cache to immediately invoke all dependencies, do:
 
