run `verb --init`, generate docs

--- a/.verb.md
+++ b/.verb.md
@@ -1,16 +1,9 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
 If you use webpack and are experiencing issues, try using [unlazy-loader](https://github.com/doowb/unlazy-loader), a webpack loader that fixes the bug that prevents webpack from working with native javascript getters.
-
-## Install
-{%= include("install-npm", {save: true}) %}
 
 ## Usage
 
 ```js
-var lazy = require('{%= name %}')(require);
+var utils = require('{%= name %}')(require);
 ```
 
 **Use as a property on `lazy`**
@@ -19,16 +12,16 @@ The module is also added as a property to the `lazy` function
 so it can be called without having to call a function first.
 
 ```js
-var lazy = require('{%= name %}')(require);
+var utils = require('{%= name %}')(require);
 
 // `npm install glob`
-lazy('glob');
+utils('glob');
 
 // glob sync
-console.log(lazy.glob.sync('*.js'));
+console.log(utils.glob.sync('*.js'));
 
 // glob async
-lazy.glob('*.js', function (err, files) {
+utils.glob('*.js', function (err, files) {
   console.log(files);
 });
 ```
@@ -36,8 +29,8 @@ lazy.glob('*.js', function (err, files) {
 **Use as a function**
 
 ```js
-var lazy = require('{%= name %}')(require);
-var glob = lazy('glob');
+var utils = require('{%= name %}')(require);
+var glob = utils('glob');
 
 // `glob` is a now a function that may be called when needed
 glob().sync('foo/*.js');
@@ -52,6 +45,7 @@ An alias may be passed as the second argument if you don't want to use the autom
 ```js
 var utils = require('{%= name %}')(require);
 
+// alias `ansi-yellow` as `yellow`
 utils('ansi-yellow', 'yellow');
 console.log(utils.yellow('foo'));
 ```
@@ -84,30 +78,10 @@ utils.glob('*.js', function (err, files) {
 
 ## Kill switch
 
-In certain rare edge cases it may be necessary to unlazy all lazy-cached dependencies (5 reported cases out of > 11 million downloads).
+In certain rare edge cases it may be necessary to unlazy all lazy-cached dependencies (5 reported cases after ~30 million downloads).
 
 To force lazy-cache to immediately invoke all dependencies, do:
 
 ```js
 process.env.UNLAZY = true;
 ```
-
-## Related
-{%= related(verb.related.list) %}
-
-## Running tests
-{%= include("tests") %}
-
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright() %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
