dot notation example

--- a/.verb.md
+++ b/.verb.md
@@ -52,6 +52,20 @@ utils('ansi-yellow', 'yellow');
 console.log(utils.yellow('foo'));
 ```
 
+Dot notation may also be used in the alias to create an object hierarchy.
+
+**Example**
+
+```js
+var utils = require('{%= name %}')(require);
+utils('ansi-cyan', 'color.cyan');
+utils('ansi-yellow', 'color.yellow');
+utils('ansi-magenta', 'color.magenta');
+console.log(utils.color.cyan('foo'));
+console.log(utils.color.yellow('bar'));
+console.log(utils.color.magenta('baz'));
+```
+
 ## Browserify usage
 
 **Example**
